# football_fantasy

./: .app_pids  .gitignore  ANALYSIS.md  CLAUDE.md  README.md  dev.sh  docker-compose-old.yml  docker-compose.dev.yml  docker-compose.yml  docker.sh  nginx.conf  package.json  restart.sh  setup.sh  start.sh  status.sh  stop.sh  test-websocket.html
.claude/: settings.local.json
api/: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.queue-worker  README.md  composer.json  docker-entrypoint.sh  rollback_and_migrate.sh
api/config/: cors.php  l5-swagger.php  queue.php  services.php
api/docker/: supervisord-api.conf  supervisord.conf
api/routes/: api.php
api/tests/: CaptureSimulation.php  SimulationAnalysis.php  SimulationAnimationTest.php  SimulationAttributeTest.php
frontend/: .dockerignore  CLAUDE.md  Dockerfile  Dockerfile.dev  README.md  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.tsx  index.css  index.tsx
match-simulator/: .gitignore  Dockerfile  README.md  env.example  package-lock.json  package.json
match-simulator/src/: index.ts
mobile/: index.html  package.json  tailwind.config.js  vite.config.ts
mobile/src-tauri/: Cargo.toml  tauri.conf.json
mobile/src-tauri/src/: lib.rs  main.rs
mobile/src-tauri/src/commands/: mod.rs
mobile/src-tauri/src/db/: mod.rs  schema.sql
mobile/src-tauri/src/models/: mod.rs
mobile/src-tauri/src/simulation/: engine.rs
routes/: api.php
unified-simulator/: .gitignore  Dockerfile  README.md  TODO.md  package-lock.json  package.json
(+207 files in other folders)
